[ci] FreeBSD package mbedtls3
FreeBSD 14.? now packages 'mbedtls2' and 'mbedtls3' instead of 'mbedtls'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,7 @@ jobs:
           prepare: |
             pkg install -y autoconf automake autotools libtool m4 pkgconf \
               ninja meson cmake scons-py311 pcre2 perl5 \
-              gnutls libressl mbedtls nettle nss wolfssl \
+              gnutls libressl mbedtls3 nettle nss wolfssl \
               cyrus-sasl krb5 libdbi openldap26-client \
               mariadb1011-client postgresql16-client \
               brotli libdeflate zstd \
