--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install packages
         run: |
-          brew install meson ninja pkg-config pcre2 perl \
+          brew install -q meson ninja pkg-config pcre2 perl \
             gnutls libressl mbedtls nettle nss wolfssl \
             cyrus-sasl krb5 libdbi openldap \
             mariadb-connector-c libpq \
