[cmake] use execute_process()
use execute_process() to replace (deprecated) exec_program()

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -315,12 +315,12 @@ macro(XCONFIG _package _link_FLAGS _cflags)
 		message(STATUS "found ${_package}: ${XCONFIG_EXECUTABLE}")
 
 		if(${_package} STREQUAL "pcre2-config")
-			exec_program(${XCONFIG_EXECUTABLE} ARGS --libs8 OUTPUT_VARIABLE __link_FLAGS)
+			execute_process(COMMAND ${XCONFIG_EXECUTABLE} --libs8 OUTPUT_VARIABLE __link_FLAGS)
 		else()
-			exec_program(${XCONFIG_EXECUTABLE} ARGS --libs OUTPUT_VARIABLE __link_FLAGS)
+			execute_process(COMMAND ${XCONFIG_EXECUTABLE} --libs OUTPUT_VARIABLE __link_FLAGS)
 		endif()
 		string(REPLACE "\n" "" ${_link_FLAGS} ${__link_FLAGS})
-		exec_program(${XCONFIG_EXECUTABLE} ARGS --cflags OUTPUT_VARIABLE __cflags)
+		execute_process(COMMAND ${XCONFIG_EXECUTABLE} --cflags OUTPUT_VARIABLE __cflags)
 		string(REPLACE "\n" "" ${_cflags} ${__cflags})
 	else()
 		message(STATUS "found ${_package}: no")
