--- a/meson.build
+++ b/meson.build
@@ -3,7 +3,10 @@ project(
   'c',
   version: '1.4.78',
   license: 'BSD-3-Clause',
-  default_options: ['c_std=c11'],
+  default_options: [
+    'buildtype=debugoptimized',
+    'c_std=c11'
+  ],
   meson_version: '>=0.47.0',
 )
 
