--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -255,10 +255,10 @@ jobs:
             libxml2-devel libsqlite3-devel
             libintl-devel
       - name: Update
-        shell: powershell
+        shell: pwsh
         run: |
           # (https://github.com/cygwin/cygwin-install-action/blob/master/action.yml)
-          Invoke-WebRequest https://cygwin.com/setup-x86_64.exe -OutFile C:\setup.exe
+          Invoke-WebRequest https://cygwin.com/setup-x86_64.exe -OutFile C:\setup.exe -MaximumRetryCount 3
           # because setup is a Windows GUI app, make it part of a pipeline to make
           # PowerShell wait for it to exit
           & C:\setup.exe -qgnO -t | Out-Default
