[ci] Cygwin prefer D:\ drive

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -241,6 +241,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: cygwin/cygwin-install-action@master
         with:
+          install-dir: D:\cygwin
+          allow-test-packages: true
           packages: >
             autoconf automake libtool m4 make
             cmake meson ninja scons
@@ -258,12 +260,12 @@ jobs:
         shell: pwsh
         run: |
           # (https://github.com/cygwin/cygwin-install-action/blob/master/action.yml)
-          Invoke-WebRequest https://cygwin.com/setup-x86_64.exe -OutFile C:\setup.exe -MaximumRetryCount 3
-          # because setup is a Windows GUI app, make it part of a pipeline to make
-          # PowerShell wait for it to exit
-          & C:\setup.exe -qgnO -t | Out-Default
+          Invoke-WebRequest https://cygwin.com/setup-x86_64.exe -OutFile D:\setup.exe -MaximumRetryCount 3
+          # because setup is a Windows GUI app, make it part of a pipeline to
+          # make PowerShell wait for it to exit
+          & D:\setup.exe -qgnO -t | Out-Default
       - name: Compile and Test
-        shell: C:\cygwin\bin\bash.exe --noprofile --norc -o igncr -eo pipefail '{0}'
+        shell: D:\cygwin\bin\bash.exe --noprofile --norc -o igncr -eo pipefail '{0}'
         run: |
           set -e
           export PATH=/usr/bin:$(cygpath ${SYSTEMROOT})/system32
