[doc] move TLS config to separate file tls.conf
move TLS annotated config sample to separate include file tls.conf
(out from lighttpd.annotated.conf)

--- a/doc/config/modules.conf
+++ b/doc/config/modules.conf
@@ -50,7 +50,7 @@
 ## Alphabetizing may break expected functionality.  See explanation above.
 ##
 
-server.modules = (
+server.modules += (
 #  "mod_rewrite",
   "mod_access",
 #  "mod_auth",
@@ -67,6 +67,11 @@ server.modules = (
 ##
 ##  Config for various Modules
 ##
+
+##
+## TLS/SSL configuration
+##
+#include conf_dir + "/conf.d/tls.conf"
 
 ##
 ## mod_expire
