[doc] systemd lighttpd*.socket activation examples

--- a/doc/systemd/Makefile.am
+++ b/doc/systemd/Makefile.am
@@ -1,1 +1,6 @@
-EXTRA_DIST=lighttpd.service lighttpd.socket
+EXTRA_DIST= \
+  lighttpd-http-ipv4.socket \
+  lighttpd-http-ipv6.socket \
+  lighttpd-https-ipv4.socket \
+  lighttpd-https-ipv6.socket \
+  lighttpd.service
