--- a/doc/systemd/lighttpd.service
+++ b/doc/systemd/lighttpd.service
@@ -52,6 +52,7 @@ AmbientCapabilities=CAP_NET_BIND_SERVICE
 # Note: RestrictSUIDSGID=yes
 #   could break CGI scripts or WebDAV setting suid/sgid permission bit on files
 
+KeyringMode=private
 LockPersonality=yes
 MemoryDenyWriteExecute=yes
 NoNewPrivileges=yes
@@ -61,9 +62,9 @@ ProtectClock=yes
 ProtectControlGroups=yes
 ProtectHome=read-only
 ProtectHostname=yes
-ProtectKernelTunables=yes
-ProtectKernelModules=yes
 ProtectKernelLogs=yes
+ProtectKernelModules=yes
+ProtectKernelTunables=yes
 ProtectProc=invisible
 ProtectSystem=full
 RestrictAddressFamilies=AF_INET AF_INET6 AF_UNIX
