--- a/doc/systemd/lighttpd.service
+++ b/doc/systemd/lighttpd.service
@@ -4,6 +4,9 @@ After=network-online.target
 Documentation=man:lighttpd https://wiki.lighttpd.net
 
 # optional: systemd socket activation for lighttpd
+# Requires lighttpd.conf: server.systemd-socket-activation = "enable"
+# Requires installation, configuration, enabling of systemd lighttpd*.socket
+# https://git.lighttpd.net/lighttpd/lighttpd1.4/src/branch/master/doc/systemd/
 #Requires=lighttpd-http-ipv4.socket lighttpd-http-ipv6.socket lighttpd-https-ipv4.socket lighttpd-https-ipv6.socket
 
 [Install]
@@ -49,11 +52,7 @@ AmbientCapabilities=CAP_NET_BIND_SERVICE
 
 # Using systemd socket activation, even CAP_NET_BIND_SERVICE is not necessary
 # and could be removed from AmbientCapabilities and CapabilityBoundingSet.
-# Requires lighttpd.conf: server.systemd-socket-activation = "enable"
-# Requires installation, configuration, enabling of systemd lighttpd*.socket
-# Requires the 'Requires' in the [Unit] section at top of this file.
-# See /usr/share/doc/lighttpd/examples/lighttpd*.socket or lighttpd source tree
-# https://git.lighttpd.net/lighttpd/lighttpd1.4/src/branch/master/doc/systemd/
+# Requires lighttpd*.socket 'Requires' in [Unit] section at top of this file.
 
 # Note: PrivateTmp=yes
 #   could break backends if named socket from independent daemon is located
