[doc] systemd lighttpd.service SystemCallFilter
systemd lighttpd.service SystemCallFilter sample (commented out)

--- a/doc/systemd/lighttpd.service
+++ b/doc/systemd/lighttpd.service
@@ -82,3 +82,17 @@ RestrictNamespaces=yes
 RestrictRealtime=yes
 RestrictSUIDSGID=yes
 SystemCallArchitectures=native
+
+#SystemCallFilter=@known
+#SystemCallFilter=@system-service
+#SystemCallFilter=~@privileged
+#SystemCallFilter=@setuid
+#SystemCallFilter=~@mount
+#SystemCallFilter=chroot
+#SystemCallFilter=~@resources
+#SystemCallFilter=setrlimit
+#SystemCallFilter=~@cpu-emulation
+#SystemCallFilter=~@debug
+#SystemCallFilter=~@keyring
+#SystemCallFilter=~@obsolete
+#SystemCallFilter=~@pkey
