[build] check for C23 memset_explicit()
unsurprisingly, compilers providing C23 support may be present
on systems without supporting C library headers containing
memset_explicit() prototype.

--- a/src/meson.build
+++ b/src/meson.build
@@ -129,6 +129,7 @@ functions = {
   'malloc_trim': 'malloc.h',
   'mallopt': 'malloc.h',
   'mempcpy': 'string.h',
+  'memset_explicit': 'string.h',
   'memset_s': 'string.h',
   'mkostemp': 'stdlib.h',
   'mmap': 'sys/mman.h',
