--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -253,6 +253,7 @@ check_function_exists(issetugid HAVE_ISSETUGID)
 check_function_exists(memset_s HAVE_MEMSET_S)
 check_function_exists(explicit_bzero HAVE_EXPLICIT_BZERO)
 check_function_exists(explicit_memset HAVE_EXPLICIT_MEMSET)
+check_function_exists(memset_explicit HAVE_MEMSET_EXPLICIT)
 check_symbol_exists(clock_gettime "time.h" HAVE_CLOCK_GETTIME)
 if (NOT HAVE_CLOCK_GETTIME)
 	check_library_exists(rt clock_gettime "time.h" HAVE_CLOCK_GETTIME)
