--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,8 @@
+option('with_boringssl',
+	type: 'boolean',
+	value: false,
+	description: 'with boringssl-support [default: off]',
+)
 option('with_brotli',
 	type: 'feature',
 	value: 'disabled',
