--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ option(WITH_XATTR "with xattr-support for the stat-cache [default: off]")
 option(WITH_MYSQL "with mysql-support for mod_vhostdb_mysql [default: off]")
 option(WITH_PGSQL "with postgres-support for mod_vhostdb_pgsql [default: off]")
 option(WITH_DBI "with dbi-support for mod_vhostdb_dbi [default: off]")
+option(WITH_BORINGSSL "with boringssl-support [default: off]")
 option(WITH_GNUTLS "with GnuTLS-support [default: off]")
 option(WITH_MBEDTLS "with mbedTLS-support [default: off]")
 option(WITH_NSS "with NSS-crypto-support [default: off]")
@@ -403,6 +404,17 @@ if(WITH_OPENSSL)
 else()
 	unset(HAVE_OPENSSL_SSL_H)
 	unset(HAVE_LIBSSL)
+endif()
+
+if(WITH_BORINGSSL)
+	find_package(BoringSSL)
+	if(BORINGSSL_FOUND)
+		set(HAVE_OPENSSL_SSL_H 1)
+		set(HAVE_LIBSSL 1)
+		if(NOT WITH_OPENSSL AND NOT WITH_WOLFSSL AND NOT WITH_MBEDTLS AND NOT WITH_NETTLE AND NOT WITH_GNUTLS)
+			set(CRYPTO_LIBRARY BoringSSL::Crypto)
+		endif()
+	endif()
 endif()
 
 if(WITH_WOLFSSL)
@@ -1181,6 +1193,12 @@ if(OPENSSL_FOUND)
 	add_and_install_library(mod_openssl "mod_openssl.c")
 	set(L_MOD_OPENSSL ${L_MOD_OPENSSL} ssl crypto)
 	target_link_libraries(mod_openssl ${L_MOD_OPENSSL})
+endif()
+
+if(BORINGSSL_FOUND)
+	add_and_install_library(mod_boringssl "mod_boringssl.c")
+	set(L_MOD_BORINGSSL ${L_MOD_BORINGSSL} ssl crypto stdc++)
+	target_link_libraries(mod_boringssl ${L_MOD_BORINGSSL})
 endif()
 
 if(HAVE_WOLFSSL)
