--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,21 +16,27 @@ concurrency:
 
 jobs:
 
+  # note: could combine Linux-ubuntu-gcc and Linux-ubuntu-clang by using
+  #     strategy: matrix: compiler: ['gcc','clang']
+  #   but a bit excessive for combinatorial explosion of different build systems
+  # note: use compiler package gcc-multilib or clang-multilib
+  #   if platform not x64 or Windows
+
   Linux-ubuntu-gcc:
     runs-on: ubuntu-latest
-    name: Linux-ubuntu-${{matrix.platform}}-gcc
+    name: Linux-ubuntu-${{matrix.platform}}-${{matrix.compiler}}
     strategy:
       matrix:
         platform: ['x64']
+        compiler: ['gcc']
     steps:
       - uses: actions/checkout@v4
-      - uses: egor-tensin/setup-gcc@v1
-        with:
-          platform: ${{matrix.platform}}
       - name: Install packages
         run: |
           sudo apt-get update
-          sudo apt-get install build-essential \
+          sudo DEBIAN_FRONTEND=noninteractive \
+            apt-get install -yq --no-install-recommends \
+            build-essential ${{matrix.compiler}} \
             cmake meson ninja-build pkg-config scons \
             autoconf automake autotools-dev libtool m4 \
             nettle-dev gnutls-dev \
@@ -51,19 +57,19 @@ jobs:
 
   Linux-ubuntu-clang:
     runs-on: ubuntu-latest
-    name: Linux-ubuntu-${{matrix.platform}}-clang
+    name: Linux-ubuntu-${{matrix.platform}}-${{matrix.compiler}}
     strategy:
       matrix:
         platform: ['x64']
+        compiler: ['clang']
     steps:
       - uses: actions/checkout@v4
-      - uses: egor-tensin/setup-clang@v1
-        with:
-          platform: ${{matrix.platform}}
       - name: Install packages
         run: |
           sudo apt-get update
-          sudo apt-get install build-essential \
+          sudo DEBIAN_FRONTEND=noninteractive \
+            apt-get install -yq --no-install-recommends \
+            build-essential ${{matrix.compiler}} \
             cmake meson ninja-build pkg-config scons \
             autoconf automake autotools-dev libtool m4 \
             nettle-dev gnutls-dev \
