[core] restrict request trailers to configured list
restrict request trailers to configured list of field names

server.feature-flags += ("request.trailer-whitelist" => "...")
  ("..." is comma-separated list of field names containing no spaces)

--- a/tests/lighttpd.conf
+++ b/tests/lighttpd.conf
@@ -17,6 +17,7 @@ server.name                = "www.example.org"
 server.tag                 = "lighttpd-1.4.x"
 
 server.feature-flags += ( "auth.delay-invalid-creds" => "disable" )
+server.feature-flags += ( "request.trailer-whitelist" => "test-trailer" )
 
 server.dir-listing          = "enable"
 
