--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -470,12 +470,22 @@ endif()
 if(WITH_MBEDTLS)
 	check_include_files(mbedtls/ssl.h HAVE_MBEDTLS_SSL_H)
 	if(HAVE_MBEDTLS_SSL_H)
-		check_library_exists(mbedcrypto mbedtls_base64_encode "" HAVE_LIBMBEDCRYPTO)
+		check_library_exists(tfpsacrypto mbedtls_base64_encode "" HAVE_LIBMBEDCRYPTO)
 		if(HAVE_LIBMBEDCRYPTO)
-			set(CRYPTO_LIBRARY mbedcrypto)
+			set(CRYPTO_LIBRARY tfpsacrypto)
+			set(HAVE_LIBTFPSACRYPTO 1)
 			check_library_exists(mbedtls mbedtls_ssl_init "" HAVE_LIBMBEDTLS)
 			if(HAVE_LIBMBEDTLS)
 			    check_library_exists(mbedx509 mbedtls_x509_get_name "" HAVE_LIBMBEDX509)
+			endif()
+		else()
+			check_library_exists(mbedcrypto mbedtls_base64_encode "" HAVE_LIBMBEDCRYPTO)
+			if(HAVE_LIBMBEDCRYPTO)
+				set(CRYPTO_LIBRARY mbedcrypto)
+				check_library_exists(mbedtls mbedtls_ssl_init "" HAVE_LIBMBEDTLS)
+				if(HAVE_LIBMBEDTLS)
+				    check_library_exists(mbedx509 mbedtls_x509_get_name "" HAVE_LIBMBEDX509)
+				endif()
 			endif()
 		endif()
 	endif()
@@ -1213,7 +1223,11 @@ endif()
 
 if(HAVE_LIBMBEDTLS AND HAVE_LIBMEDCRYPTO AND HAVE_LIBMEDX509)
 	add_and_install_library(mod_mbedtls "mod_mbedtls.c")
-	set(L_MOD_MBEDTLS ${L_MOD_MBEDTLS} mbedtls mbedx509 mbedcrypto)
+	if(HAVE_LIBTFPSACRYPTO)
+		set(L_MOD_MBEDTLS ${L_MOD_MBEDTLS} mbedtls mbedx509 tfpsacrypto)
+	else()
+		set(L_MOD_MBEDTLS ${L_MOD_MBEDTLS} mbedtls mbedx509 mbedcrypto)
+	endif()
 	target_link_libraries(mod_mbedtls ${L_MOD_MBEDTLS})
 endif()
 
