[systemd] add RestrictAddressFamilies AF_NETLINK
Add AF_NETLINK to RestrictAddressFamilies for syslog() implementations
on some architectures.

x-ref:
  "needs access to AF_NETLINK sockets"
  https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1114554

--- a/doc/systemd/lighttpd.service
+++ b/doc/systemd/lighttpd.service
@@ -77,7 +77,7 @@ ProtectKernelModules=yes
 ProtectKernelTunables=yes
 ProtectProc=invisible
 ProtectSystem=full
-RestrictAddressFamilies=AF_INET AF_INET6 AF_UNIX
+RestrictAddressFamilies=AF_INET AF_INET6 AF_UNIX AF_NETLINK
 RestrictNamespaces=yes
 RestrictRealtime=yes
 RestrictSUIDSGID=yes
