--- a/src/SConscript
+++ b/src/SConscript
@@ -56,7 +56,7 @@ def GatherLibs(env, *libs):
 	return WorkaroundFreeBSDLibOrder(libs)
 
 common_src = Split("base64.c buffer.c burl.c log.c \
-	http_header.c http_kv.c keyvalue.c chunk.c  \
+	http_header.c http_kv.c http_status.c keyvalue.c chunk.c  \
 	http_chunk.c fdevent.c fdevent_fdnode.c gw_backend.c \
 	stat_cache.c http_etag.c array.c \
 	algo_md5.c algo_sha1.c algo_splaytree.c \
