[tests] t/test_http_status.c stub

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1017,6 +1017,7 @@ add_executable(test_common
 	t/test_http_header.c
 	t/test_http_kv.c
 	t/test_http_range.c
+	t/test_http_status.c
 	t/test_keyvalue.c
 	t/test_request.c
 	log.c
