--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -518,6 +518,7 @@ t_test_common_SOURCES = t/test_common.c \
                         t/test_http_header.c \
                         t/test_http_kv.c \
                         t/test_http_range.c \
+                        t/test_http_status.c \
                         t/test_keyvalue.c \
                         t/test_request.c \
                         log.c \
